# shebangrun

./: .bashrc  .env.example  .gitignore  Colab_Example_With_Secrets.ipynb  Dockerfile  Dockerfile.cli  ENCRYPTION.md  FRONTEND.md  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP_WIZARD.md  build.sh  console_out  docker-compose.yml  go.mod  nginx.conf  openapi.yaml
chrome-extension/: INSTALL.md  README.md  manifest.json  popup.html  popup.js
chrome-extension/scripts/: background.js  content.js
cmd/server/: main.go
internal/ai/: ai.go  bedrock.go  claude.go  openai.go
internal/api/: account.go  admin.go  ai.go  auth.go  community.go  keys.go  public.go  scripts.go  secrets.go  setup.go  share.go  web.go
internal/auth/: auth.go  oauth.go
internal/config/: config.go
internal/crypto/: crypto.go  udek.go
internal/database/: acl.go  api_tokens.go  db.go  keypairs.go  migrations.go  models.go  scripts.go  tiers.go  tokens.go  users.go
internal/jobs/: subscriptions.go
internal/kms/: kms.go
internal/middleware/: auth.go  ratelimit.go  tier.go
internal/storage/: local.go  s3.go  storage.go
migrations/: 001_initial_schema.sql  002_add_wrapped_key.sql  003_add_api_tokens.sql  004_server_side_encryption.sql  005_user_tiers.sql
python/: README.md  examples.py  pyproject.toml
python/shebangrun/: __init__.py  cli.py  client.py
web/static/: THIRD_PARTY_LICENSES.txt  crypto.js
web/templates/: account.html  admin.html  api-reference.html  community.html  dashboard.html  docs.html  gdpr.html  index.html  keys.html  layout.html  login.html  privacy.html  (+6 more)
