[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shebangrun"
version = "0.2.3"
description = "Python client library for shebang.run"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "shebang.run", email = "hello@shebang.run"}
]
keywords = ["shebang", "scripts", "automation", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
    "cryptography>=3.4.0",
    "pynacl>=1.4.0",
]

[project.scripts]
shebang = "shebangrun.cli:main"

[project.urls]
Homepage = "https://shebang.run"
Documentation = "https://shebang.run/docs"
Repository = "https://github.com/skibare87/shebangrun"
"Bug Tracker" = "https://github.com/skibare87/shebangrun/issues"
